--- a/recipes-daemons/autofs/autofs-4.1.4/auto.master
+++ b/recipes-daemons/autofs/autofs-4.1.4/auto.master
@@ -8,4 +8,4 @@
 #/smb	/etc/auto.smb
 #/net	/etc/auto.net
 /autofs     /etc/auto.hotplug
-/media/net  /etc/auto.network
+/media/net  /etc/auto.network --ghost --timeout=300
